# xover

./: .gitignore  pyproject.toml  readme.md  requirements.txt
binder/: Dockerfile
data/: atl06_land_ice_heights_full.parquet  icesat-radar-merged_points.parquet  icesat-radar-merged_points_power_extracted.parquet  intersections.parquet  stac_union_gdf.parquet  x_points_explode.parquet
notebooks/: atl06_xover_points.ipynb  get_echopower_from_crossover.ipynb  intersection_icesat.ipynb  merge_crossover.ipynb  test.ipynb
notebooks/radar_cache/: cache
xover/: echopower_util.py  icepyx_utils.py
