[project]
name = "xover"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geoarrow-pandas>=0.1.1",
    "geoarrow-pyarrow>=0.2.0",
    "icepyx>=2.0.2",
    "jupyter-bokeh>=4.0.5",
    "jupyterlab>=4.5.6",
    "myst>=0.0.1",
    "spyder-kernels==3.0.*",
    "xopr>=0.4.3",
]
